--- a/development projects/UDS_implementation/UDS_client_test2/.cproject
+++ b/development projects/UDS_implementation/UDS_client_test2/.cproject
@@ -212,4 +212,5 @@
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
