added full flow of uart sequence with uds in a working project

--- a/development projects/UDS_implementation/UDS_client/.project
+++ b/development projects/UDS_implementation/UDS_client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UDS_client</name>
+	<name>UDS_client_test2</name>
 	<comment></comment>
 	<projects>
 	</projects>
