--- a/oem_application/bazel_oem_application/BUILD
+++ b/oem_application/bazel_oem_application/BUILD
@@ -8,6 +8,7 @@ py_binary(
           "combine_bins.py", 
           "package_config.py", 
           "firebase_connection.py",
+          "mpeg2_crc.py",
     ],
 
     data = ["serviceAccountKey.json"],
